--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 header {
   display: flex;
   align-items: center;
-  width: 960px;
+  width: 960px; /*need to figure out how to make header and footer full width without distorting other elements*/
 }
 
 main {
@@ -35,9 +35,10 @@ section {
 button {
   align-self: flex-start;
   background-color: #000000;
+  border-radius: 10px;
   color: #ffffff;
-  height: 20%;
-  width: 33%;
+  height: 12%;
+  width: 58%;
   transition-duration: 350ms;
 }
 
@@ -45,6 +46,7 @@ button:hover {
   background-color: #ffffff;
   color: #000000;
 }
+
 h2 {
   font-size: 1.5em;
   font-weight: bold;
@@ -66,4 +68,5 @@ footer {
   height: 140px;
   width: 100%;
   background-color: lightgray;
+  margin-bottom: 10px;
 }
