--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
 header {
   display: flex;
   align-items: center;
+  height: 175px;
   width: 960px; /*need to figure out how to make header and footer full width without distorting other elements*/
 }
 
